# egui-aesthetix

./: .gitignore  Cargo.toml  README.md  justfile
src/: lib.rs
src/themes/: mod.rs
src/themes/carl/: dark.rs  mod.rs
src/themes/nord/: dark.rs  light.rs  mod.rs
src/themes/standard/: dark.rs  light.rs  mod.rs
src/themes/tokyo_night/: dark.rs  mod.rs  storm.rs
