[package]
name = "egui-aesthetix"
version = "0.1.0"
description = "A Uniform and programmatic approach to theming Egui applications"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.23.0"

[lib]
name = "egui_aesthetix"
path = "src/lib.rs"
